# SciReasoner

./: .gitignore  README.md  answer.py  caption.py  pyproject.toml
plugins/claude-code/scireasoner/: README.md  install.sh
plugins/claude-code/scireasoner/.claude-plugin/: marketplace.json  mcp.json  plugin.json
plugins/claude-code/scireasoner/src/: run_scireasoner_mcp.sh
plugins/codex/scireasoner/: .mcp.json  README.md  install.sh
plugins/codex/scireasoner/.codex-plugin/: plugin.json
scireasoner/: __init__.py  cli.py  mcp_server.py  pipeline.py
seephys_pro_codabench/output/submissions/: README.md
seephys_pro_codabench/output/submissions/sub_001_gemini_baseline/: notes.md  prediction.csv  prediction_private.csv
seephys_pro_codabench/output/submissions/sub_002_gpt5.5_critic_audited/: notes.md  prediction.csv  prediction_pre_audit.csv
seephys_pro_codabench/output/submissions/sub_003_gemini_audited/: notes.md  prediction.csv
seephys_pro_codabench/output/submissions/sub_004_l4_recaption/: notes.md  prediction_audited.csv  prediction_pre_audit.csv
seephys_pro_codabench/output/submissions/sub_005_l1_promptv3/: notes.md  prediction_audited.csv  prediction_pre_audit.csv
seephys_pro_codabench/output/submissions/sub_006_l1_sc3/: audit_report.md  notes.md  prediction.csv  prediction_pre_audit.csv
seephys_pro_codabench/output/submissions/sub_007_l2_caption/: notes.md  prediction.csv  prediction_pre_audit.csv
seephys_pro_codabench/output/submissions/sub_008_l1_fewshot/: audit_report.md  notes.md  prediction.csv  prediction_pre_audit.csv
seephys_pro_codabench/scripts/: audit_fix.py  run_baseline.py  run_jury.py  run_v2.py
tests/: test_pipeline.py
(+1 files in other folders)
